# array

./: .gitignore  CMakeLists.txt  README.md  array.c  array_test.c  main.c
.github/workflows/: cmake.yml
cmake/: array-config.cmake
include/array/: array.h
